--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav {
     padding-right: 10px;
     }
     
-nav > a{
+nav a{
   background-color: grey;
 }
 
@@ -40,5 +40,8 @@ margin-left: auto;
 
 section {
   display: block;
-  
+}
+
+#details > div {
+  float: left;
 }
